@@ -1,3 +1,9 @@
+TAG: homologyload-6-0-6-1
+DATE: 11/10/2016
+STAFF: lec
+CHANGES: 
+1) remove 'scrum-bob' from index.html
+
 TAG: homologyload-6-0-5-4
 DATE: 09/26/2016
 STAFF: sc
